# self-evolving-agents

./: .env.example  .gitignore  README.md  TASKS.md  app.py  pyproject.toml
configs/: default.yaml
examples/: 01_basic_agent.py  02_memory_evolution.py  03_reflexion.py  04_prompt_optimization.py  05_tool_learning.py  06_benchmark_runner.py  07_generate_demo_data.py
src/self_evolving/: __init__.py
src/self_evolving/core/: __init__.py  agent.py  environment.py  types.py
src/self_evolving/dashboard/: __init__.py  data.py  demo_data.py
src/self_evolving/evaluation/: __init__.py  benchmark.py  metrics.py
src/self_evolving/evolution/: __init__.py
src/self_evolving/evolution/memory/: __init__.py  embedders.py  episodic.py
src/self_evolving/evolution/prompt/: __init__.py  opro.py
src/self_evolving/evolution/tools/: __init__.py  learner.py
src/self_evolving/mechanisms/: __init__.py
src/self_evolving/mechanisms/reflection/: __init__.py  base.py  reflexion.py  self_refine.py
src/self_evolving/mechanisms/reward/: __init__.py  scorer.py
src/self_evolving/persistence/: __init__.py  sqlite_store.py
src/self_evolving/service/: __init__.py  api.py  jobs.py
tests/: test_api.py  test_benchmark_runner.py  test_core.py  test_dashboard_data.py  test_demo_data.py  test_sqlite_store.py  test_vector_memory.py
